--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <div class="home-blog clearfix">
             <ul>
 
-              <!-- Begin Student 1 -->
+              <!-- Begin Aaron -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <a href="students/student_name.html">
@@ -117,9 +117,9 @@
                 </div>
                 <div class="clear"></div>
               </li>
-              <!-- End Student 1 -->
+              <!-- End Aaron -->
 
-              <!-- Begin Student 2 -->
+              <!-- Begin Bronte -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <a href="students/student_name.html">
@@ -142,9 +142,9 @@
                 </div>
                 <div class="clear"></div>
               </li>
-              <!-- End Student 2 -->
+              <!-- End Bronte -->
 
-              <!-- Begin Student 3 -->
+              <!-- Begin Brooke -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <a href="students/student_name.html">
@@ -167,9 +167,9 @@
                 </div>
                 <div class="clear"></div>
               </li>
-              <!-- End Student 3 -->
+              <!-- End Brooke -->
 
-              <!-- Begin Student 4 -->
+              <!-- Begin Donald -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <a href="students/student_name.html">
@@ -192,9 +192,132 @@
                 </div>
                 <div class="clear"></div>
               </li>
-              <!-- End Student 4 -->
+              <!-- End Donald -->
 
-              <!-- Duplicate li code block above to place more students here -->
+              <!-- Begin Eduardo -->
+              <li class="home-blog-post">
+                <div class="blog-thumb">
+                  <a href="students/student_name.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  </a>
+                </div>
+
+                <div class="blog-title">
+                  <div class="big-comment">
+                    <h3>
+                      <a href="students/student_name.html">Student Name</a>
+                    </h3>
+                  </div>
+                  <p class="home-blog-post-meta">Tag Line</p>
+                </div>
+                <div class="clear"></div>
+
+                <div class="excerpt">
+                  <p>Excerpt.</p>
+                </div>
+                <div class="clear"></div>
+              </li>
+              <!-- End Eduardo -->
+
+              <!-- Begin Girija -->
+              <li class="home-blog-post">
+                <div class="blog-thumb">
+                  <a href="students/student_name.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  </a>
+                </div>
+
+                <div class="blog-title">
+                  <div class="big-comment">
+                    <h3>
+                      <a href="students/student_name.html">Student Name</a>
+                    </h3>
+                  </div>
+                  <p class="home-blog-post-meta">Tag Line</p>
+                </div>
+                <div class="clear"></div>
+
+                <div class="excerpt">
+                  <p>Excerpt.</p>
+                </div>
+                <div class="clear"></div>
+              </li>
+              <!-- End Girija -->
+
+              <!-- Begin Jason -->
+              <li class="home-blog-post">
+                <div class="blog-thumb">
+                  <a href="students/student_name.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  </a>
+                </div>
+
+                <div class="blog-title">
+                  <div class="big-comment">
+                    <h3>
+                      <a href="students/student_name.html">Student Name</a>
+                    </h3>
+                  </div>
+                  <p class="home-blog-post-meta">Tag Line</p>
+                </div>
+                <div class="clear"></div>
+
+                <div class="excerpt">
+                  <p>Excerpt.</p>
+                </div>
+                <div class="clear"></div>
+              </li>
+              <!-- End Jason -->
+
+              <!-- Begin Leigha -->
+              <li class="home-blog-post">
+                <div class="blog-thumb">
+                  <a href="students/student_name.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  </a>
+                </div>
+
+                <div class="blog-title">
+                  <div class="big-comment">
+                    <h3>
+                      <a href="students/student_name.html">Student Name</a>
+                    </h3>
+                  </div>
+                  <p class="home-blog-post-meta">Tag Line</p>
+                </div>
+                <div class="clear"></div>
+
+                <div class="excerpt">
+                  <p>Excerpt.</p>
+                </div>
+                <div class="clear"></div>
+              </li>
+              <!-- End Leigha -->
+
+              <!-- Begin Nick -->
+              <li class="home-blog-post">
+                <div class="blog-thumb">
+                  <a href="students/student_name.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  </a>
+                </div>
+
+                <div class="blog-title">
+                  <div class="big-comment">
+                    <h3>
+                      <a href="students/student_name.html">Student Name</a>
+                    </h3>
+                  </div>
+                  <p class="home-blog-post-meta">Tag Line</p>
+                </div>
+                <div class="clear"></div>
+
+                <div class="excerpt">
+                  <p>Excerpt.</p>
+                </div>
+                <div class="clear"></div>
+              </li>
+              <!-- End Nick -->
 
             </ul>
           </div>
