added information for Bronte

--- a/students/Bronte_Sewell.html
+++ b/students/Bronte_Sewell.html
@@ -10,7 +10,7 @@
   <link rel='stylesheet' href="../css/style.css" type='text/css' media='all' />
   <style>
     .top-page-title {
-      background: url(../img/students/Bronte_index_profile.png) no-repeat top center;
+      background: url(../img/students/Bronte_background.jpeg) no-repeat top center;
     }
   </style>
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
@@ -74,7 +74,8 @@
       </div>
 
       <div class="link-subs">
-        <span><img class="swiss-knife-icon" src="../img/swiss-army-knife.png">Student Name</span>
+        <span><img class="swiss-knife-icon" src="../img/swiss-army-knife.png">Bronte Sewell
+        </span>
         <ul class="smooth-scroller">
           <li><a href="#scroll-about">About</a></li>
           <li>|</li>
@@ -94,14 +95,14 @@
       <!-- Begin Splash Image -->
       <div class="top-page-title">
         <div>
-          <img src="../img/students/student_name_profile.jpg" class="student_pic">
+          <img src="../img/students/Bronte_profile.png" class="student_pic">
         </div>
       </div>
       <! -- End Splash Image -->
 
       <!-- Begin Title Content -->
       <div class="page-title">
-        <h4 class="ib_main_header">Student Name</h4>
+        <h4 class="ib_main_header">Bronte Sewell</h4>
         <div class="social-icons">
           <a href="https://twitter.com/"><i class="icon-twitter ib-social-icons"></i></a>
           <a href="http://www.linkedin.com/"><i class="icon-linkedin-sign ib-social-icons"></i></a>
@@ -114,7 +115,7 @@
             <ul class="testimonials slides">
               <li id="text-7" class="widget_text" style="list-style: none; display: list-item;">
                 <div class="textwidget">
-                  <h3>"Quote It was the best of times it was meh." -- someone smart said this.</h3>
+                  <h3>I'm a kiwi who has travelled across the world and moved to SF to follow my interest and passion in coding.</h3>
                 </div>
               </li>
             </ul>
@@ -138,7 +139,7 @@
                 <div class="services-title"><h3>Biography</h3></div>
                 <div class="clear"></div>
                 <p>
-                  Bio here... Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut. 
+                    After graduating from high school in New Zealand, for the past 3 years, I have been a professional Horse Rider.  I have been riding Internationally in Europe and was at the stables that produced 8 of the top 20 horses at the last Olympics. In the middle of 2019 I moved to San Francisco for a change in career and followed another passion of mine, programming. In the last months I have self taught myself coding and decided I wanted to challenge myself in a bootcamp and believe it is very beneficial for my future. I also enjoy Swimming, sports, the outdoors and travelling.
                 </p>
               </div>
             </div>
@@ -149,7 +150,7 @@
                 <div class="clear"></div>
                 <ul>
                   <li>University</li>
-                  <li>Other School</li>
+                  <li>Flatiron</li>
                 </ul>
               </div>
             </div>
