--- a/index.html
+++ b/index.html
@@ -122,23 +122,23 @@
               <!-- Begin Bronte -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  <a href="students/Bronte_Sewell.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/Bronte_index_profile.png" class="attachment-blog-thumb wp-post-image" alt="Bronte Sewell">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/Bronte_Sewell.html">Bronte Sewell</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">Life is only as good as your mindset</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>I'm a kiwi who has travelled across the world and moved to SF to follow my interest and passion in coding.</p>
                 </div>
                 <div class="clear"></div>
               </li>
